<resources>
    <string name="app_name">Das Einkaufsnetz</string>
    <string name="title_home">Home</string>
    <string name="title_go_shopping">Einkäufe</string>
    <string name="title_shopping_list">Einkaufslisten</string>
    <string name="title_profile">Profil</string>
    <string name="title_settings">Einstellungen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_hello_home">Willkommen zurück, </string>
    <string name="home_description_01">Bleibe sicher vernetzt</string>
    <string name="home_description_02">Hier findest du Menschen in deiner Nähe mit denen du dich vernetzen kannst</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="shopping_list_title">Anstehende Einkäufe</string>
    <string name="shopping_list_description">Hier bekommst du eine Übersicht über alle anstehenden Einkäufe in deiner Nachbarschaft</string>
    <string name="shopping_list_button">Einkauf anlegen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="go_shopping_title">Benötigte Einkäufe</string>
    <string name="go_shopping_description">Hier siehst du eine Liste der benötigten Einkäufe in deiner Nachbarschaft</string>
    <string name="go_shopping_button">Liste anlegen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_first_name">Vorname</string>
    <string name="account_sur_name">Nachname</string>
    <string name="account_street">Straße</string>
    <string name="account_plz">Postleitzahl</string>
    <string name="account_city">Stadt</string>
    <string name="account_telephone">Telefon</string>
    <string name="account_mail">Mail</string>

    <string name="account_title_address">Meine Adresse</string>
    <string name="account_title_contact_information">Meine Kontaktdaten</string>
    <string name="account_data_protection">Datenschutz</string>
    <string name="account_data_protection_content">-- Hier können Datenschutzinformationen stehen --</string>
    <!--    <string name="settings_data_protection_content">Hiermit bestätige ich, dass die Nutzung der generierten Datenschutzerklärung auf eigenes Risiko erfolgt. Für eventuelle Fehler wird keine Haftung übernommen und die Verwendung dieser Texte kann keine Rechtsberatung ersetzen. Der in der Datenschutzerklärung inkludierte Verweis samt Verlinkung auf den Urheber darf nicht entfernt werden. Es gelten unsere AGB und Datenschutzerklärung.-->
    <!--Ich bestätige hiermit, die erzeugten Datenschutztexte nur samt Quellverweis und Links online zu stellen.</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_list_title">Neue Liste anlegen</string>
    <string name="new_list_description">Hier steht dann ein längerer Infotext</string>
    <string name="new_list_button_new_entry">+ Eintrag hinzufügen</string>
    <string name="new_list_button_save_list">Liste abspeichern</string>
    <string name="new_list_button_cancel">Abbrechen</string>
    <string name="new_list_market">Supermarkt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_entry_item">Artikel</string>
    <string name="new_entry_title">Neuen Eintrag erstellen</string>
    <string name="new_entry_save">Eintrag hinzufügen</string>
    <string name="new_entry_cancel">Abbrechen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="take_list_take">Einkauf übernehmen</string>
    <string name="take_list_cancel">Zurück</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_title">Login</string>
    <string name="login_failed">Login fehlgeschlagen</string>
    <string name="login_username">Benutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_button">Login</string>
    <string name="login_register">Registrieren</string>
    <string name="login_register_text">Noch kein Account?</string>

    <string name="settings_my_settings_header">Persönliche Einstellungen</string>
    <string name="settings_profile_header">Profileinstellungen</string>
    <string name="settings_information_header">Persönliche Einstellungen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_password_title">Passwort ändern</string>
    <string name="change_password_failed">Password ändern fehlgeschlagen</string>
    <string name="change_password_old">altes Password</string>
    <string name="change_password_new">neues Passwort</string>
    <string name="change_password_confirm">neues Passwort bestätigen</string>
    <string name="change_password_button">Ändern</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_tour_title">Einkauf hinzufügen</string>
    <string name="new_tour_date">Datum</string>
    <string name="new_tour_shop">Einkaufsladen</string>
    <string name="new_tour_save">Einkauf hinzufügen</string>
    <string name="new_tour_cancel">Abbrechen</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_pw_title">Registrieren</string>
    <string name="register_pw_failed">Registrieren fehlgeschlagen</string>
    <string name="register_pw_username">Benutzername</string>
    <string name="register_pw_password">Passwort</string>
    <string name="register_pw_confirm">Passwort bestätigen</string>
    <string name="register_pw_button">Registrieren</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_new">Speichern</string>
    <string name="profile_change">Ändern</string>
    <string name="profile_unknown">Bestätigen</string>

</resources>
