<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_goShopping"
        android:icon="@mipmap/ic_shopping_bag_black"
        android:title="@string/title_go_shopping" />

    <item
        android:id="@+id/navigation_shoppingList"
        android:icon="@mipmap/ic_grocery_list_black"
        android:title="@string/title_shopping_list" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@mipmap/ic_settings"
        android:title="@string/title_settings" />

</menu>
