<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_profile_header">

        <Preference
            android:id="@+id/prefPassword"
            app:title="Passwort ändern"
            app:key="change_pass"/>

        <Preference
            android:id="@+id/prefProfile"
            app:title="Profileinstellungen"
            app:key="profile_settings"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_my_settings_header">

        <SwitchPreferenceCompat
            android:id="@+id/keep_logged_in"
            app:key="keep_logged_in"
            app:title="Angemeldet bleiben" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_information_header">

        <Preference
            android:id="@+id/data_secure"
            app:title="Datenschutzinformationen lesen"
            app:key="data_secure"/>

        <Preference
            android:id="@+id/about"
            app:title="Über diese App"
            app:key="about"/>

    </PreferenceCategory>

</PreferenceScreen>
