<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.CreateNewListActivity">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline80h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline85h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline90h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline95h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline05v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline95v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:text="@string/new_tour_save"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/guideline80h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline85h" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPinkButtons"
            android:text="@string/new_tour_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/guideline95h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline90h" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_tour_title"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline15h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <ListView-->
        <!--            android:id="@+id/lvShoppingList"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_margin="10dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/guideline95h"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/guideline95v"-->
        <!--            app:layout_constraintStart_toStartOf="@id/guideline05v"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/guideline40h" />-->

        <EditText
            android:id="@+id/et_shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_tour_shop"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/guideline25h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline20h" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_tour_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/guideline20h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline15h" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>