<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragments.ShoppingListFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline15h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline25h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline35h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline40h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline95h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline05v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline65v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline95v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_button"
            android:background="@color/colorPinkButtons"
            android:textColor="@android:color/background_light"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/guideline35h"
            app:layout_constraintEnd_toStartOf="@id/guideline65v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline25h" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/colorDarcBlue"
            app:layout_constraintBottom_toTopOf="@+id/guideline40h"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_title"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline15h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_description"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline15h" />

        <ListView
            android:id="@+id/lvShoppingList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline95h"
            app:layout_constraintEnd_toStartOf="@id/guideline95v"
            app:layout_constraintStart_toStartOf="@id/guideline05v"
            app:layout_constraintTop_toTopOf="@+id/guideline40h"/>

    </android.support.constraint.ConstraintLayout>



</FrameLayout>